--- a/_LC_Classis_dotnetf.csproj
+++ b/_LC_Classis_dotnetf.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Internal\LitJson\Lexer.cs" />
     <Compile Include="Internal\LitJson\Netstandard15Polyfill.cs" />
     <Compile Include="Internal\LitJson\ParserToken.cs" />
+    <Compile Include="Internal\SVG\SvgElement.cs" />
     <Compile Include="Meta\PCB\SP\lcPlaneZone.cs" />
     <Compile Include="Meta\PCB\SIMPLE\lcArc.cs" />
     <Compile Include="Meta\PCB\SIMPLE\lcCircle.cs" />
